tests/baselines/reference/bitwiseNotOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/bitwiseNotOperatorInvalidOperations.ts (4 errors) ====
    // Unary operator ~
    var q;
    
    // operand before ~
    var a = q~;  //expect error
             ~
!!! bitwiseNotOperatorInvalidOperations.ts(5,10): error TS1005: ',' expected.
              ~
!!! bitwiseNotOperatorInvalidOperations.ts(5,11): error TS1003: Identifier expected.
    
    // multiple operands after ~
    var mul = ~[1, 2, "abc"], "";  //expect error
                              ~~
!!! bitwiseNotOperatorInvalidOperations.ts(8,27): error TS1008: Unexpected token; 'identifier' expected.
    
    // miss an operand
    var b =~;
            ~
!!! bitwiseNotOperatorInvalidOperations.ts(11,9): error TS1003: Identifier expected.